--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-/* font-family: 'Chakra Petch', sans-serif; */
-
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Exo 2', sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     box-sizing: border-box;
     text-decoration: none;
     border: none;
@@ -66,4 +64,11 @@ nav a {
     text-decoration: none;
     font-size: 24px;
     border-radius: 2px;
+}
+.intro {
+    padding-top: 15rem;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
