--- a/style.css
+++ b/style.css
@@ -84,3 +84,11 @@ nav a {
     border: transparent;
     animation: mymove 10s;
 }
+.newsletter{
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: red;
+    flex-basis: 100%;
+}
