--- a/style.css
+++ b/style.css
@@ -170,3 +170,12 @@ nav a {
     color: red;
     font-size: 1.3rem;
 }
+footer{
+    margin-top: 4%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
