--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ nav a {
 }
 
 .intro {
-    padding-top: 15rem;
+    justify-content: center;
     height: 50vh;
     display: flex;
     flex-direction: column;
@@ -125,6 +125,8 @@ nav a {
     background-size: cover;
     background-blend-mode: overlay;
     background-repeat: no-repeat;
+    border-radius: 0%;
+    margin-top: 2%;
 }
 .newbtn{
     background-color: black;
@@ -136,11 +138,21 @@ nav a {
     flex-direction: column;
     padding: 2rem;
     width: 100%;
-    height: 70vh;
+    height: 80vh;
+}
+.y{
+    flex-basis: 100%;
 }
 .x{
     display: flex;
     flex-direction: column;
+}
+.z {
+    flex-basis: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .one{
     background-image: url("img/unsplash/pizza3.jpg");
@@ -165,17 +177,27 @@ nav a {
 #about-us .card{
     padding: 1%;
     font-size: 1.8rem;
+    flex-basis: 100%;
+    align-items: center;
+    justify-content: space-around;
 }
 #about-us .fas{
     color: red;
     font-size: 1.3rem;
 }
 footer{
-    margin-top: 4%;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: center;
+}
+.quick-links{
+    background-color: black;
+    width: 100%;
+    padding: 2%;
+    display: flex;
+    justify-content: center;
+    color: white;
 }
