--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav {
     background-color: rgba(0, 0, 0, .5);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: .1% 0.2%;
     position: fixed;
     top: 0;
@@ -44,7 +44,7 @@ nav {
 
 .logo {
     flex-basis: 25%;
-    padding-left: 2%;
+    padding-left: 1%;
     display: flex;
 }
 
@@ -59,14 +59,13 @@ nav {
 }
 
 nav li {
-    padding: 0 4%;
     font-weight: 700;
 }
 
 nav a {
     color: white;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 1rem;
     border-radius: 2px;
 }
 
@@ -112,32 +111,12 @@ nav a {
     border: transparent;
 }
 
-.newsletter {
-    padding: 1.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    width: 100%;
-    align-self: baseline;
-    justify-self: baseline;
-    background: red;
-    background-size: cover;
-    background-blend-mode: overlay;
-    background-repeat: no-repeat;
-    border-radius: 0%;
-}
-.newbtn{
-    background-color: black;
-    color:white;
-    letter-spacing: .2rem;
-}
 #about-us{
     display: flex;
     flex-direction: column;
     padding: 2rem;
     width: 100%;
-    height: 80vh;
+    margin-bottom: 2%;
 }
 .y{
     flex-basis: 100%;
@@ -184,6 +163,28 @@ nav a {
     color: red;
     font-size: 1.3rem;
 }
+
+.newsletter {
+    padding: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    width: 100%;
+    align-self: baseline;
+    justify-self: baseline;
+    background: red;
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    border-radius: 0%;
+}
+.newbtn{
+    background-color: black;
+    color:white;
+    outline: 2px solid;
+    letter-spacing: .2rem;
+}
 footer{
     width: 100%;
     display: flex;
@@ -196,7 +197,7 @@ footer{
 .quick-links{
     background-color: black;
     width: 95%;
-    padding: 2% 4%;
+    padding: 2% 4% 0% 4%;
     display: flex;
     justify-content: center;
     color: white;
@@ -217,4 +218,46 @@ footer{
 }
 .quick-links h4{
     color: red;
+}
+.copyright{
+    background-color: rgb(16, 16, 22);
+    width: 100%;
+    padding: .5%;
+    font-size: .8rem;
+    flex-basis: 100%;
+    margin: 0%;
+    color: rgb(156, 156, 156);
+    font-weight: 200;
+}
+.copyright a{
+    color: red;
+    letter-spacing: .21rem;
+    margin-left: 1%;
+}
+.copyright:hover{
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+}
+.fa-shopping-basket{
+    color: red;
+    background-color: rgba(255, 255, 255, 0.87);
+    padding: 10%;
+    border-radius: 25px;
+    font-size: 1.5rem;
+}
+.sub{
+ background-color: black;
+ padding: 1rem;
+ display: flex;
+ align-items: center;
+ gap: 1%;
+ justify-content: center;
+}
+.sub .fas{
+    color: white;
+    border-radius: 0%;
+}
+.sub .btn{
+    border-radius: 0%;
+    outline: 2px solid;
 }
