--- a/style.css
+++ b/style.css
@@ -110,6 +110,16 @@ nav a {
     padding: 0.4% 2%;
     border: transparent;
 }
+.menu a{
+    color: white;
+}
+.menu a:hover{
+    color: black;
+    text-decoration: none;
+    font-size: 1.3rem;
+    padding: .4rem .6rem;
+    text-align: center;
+}
 
 #about-us{
     display: flex;
@@ -260,4 +270,15 @@ footer{
 .sub .btn{
     border-radius: 0%;
     outline: 2px solid;
+}
+nav a:hover {
+    color: white;
+    font-size: 1.3rem;
+    padding: .4rem .6rem;
+    text-align: center;
+    box-shadow: 0px .1px 1px white;
+    text-decoration: none;
+}
+.disabled{
+    pointer-events: none;
 }
