--- a/style.css
+++ b/style.css
@@ -271,13 +271,24 @@ footer{
     border-radius: 0%;
     outline: 2px solid;
 }
-nav a:hover {
+nav a:hover, footer a:hover {
     color: white;
     font-size: 1.3rem;
     padding: .4rem .6rem;
     text-align: center;
     box-shadow: 0px .1px 1px white;
     text-decoration: none;
+}
+footer a:hover {
+    color: white;
+    font-size: 1.1rem;
+    padding: .1rem .2rem;
+    text-align: center;
+    box-shadow: 0px .1px 1px white;
+    text-decoration: none;
+}
+footer a{
+    color: white;
 }
 .disabled{
     pointer-events: none;
