--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ footer{
     display: flex;
     justify-content: center;
     color: white;
+    font-weight: 700;
     font-size: .9rem;
 }
 .quick-links li::before{
@@ -223,9 +224,7 @@ footer{
     text-align: left;
     flex-basis: 30%;
 }
-.quick-links li{
-    font-weight: 100;
-}
+
 .quick-links h4{
     color: red;
 }
@@ -280,7 +279,7 @@ nav a:hover, footer a:hover {
     text-decoration: none;
 }
 footer a:hover {
-    color: white;
+    color: red;
     font-size: 1.1rem;
     padding: .1rem .2rem;
     text-align: center;
@@ -322,4 +321,7 @@ footer a{
 
 .feedback form{
     width: 80%;
+}
+.feedback nav{
+    background-color: black;
 }
