--- a/style.css
+++ b/style.css
@@ -325,3 +325,22 @@ footer a{
 .feedback nav{
     background-color: black;
 }
+.menu-body{
+    margin-top: 6rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    /* background: linear-gradient(135deg, rgba(0, 0, 0, 0.514), rgba(0, 0, 0, 0.568)), url("img/toppins.jpg"); */
+    background: url("img/toppins.jpg");
+    background-size: cover;
+}
+.menu-body .card{
+    display: flex;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+    
+}
