--- a/style.css
+++ b/style.css
@@ -370,10 +370,9 @@ footer a{
     justify-content: space-between;
 }
 .choices{
-    font-size: .82rem;
-    margin-top: 1%;
+    font-size: .8rem;
+    margin-top: 2%;
     width: 100%;
-    padding: 1%;
     display: flex;
     justify-content: space-around;
 }
@@ -390,4 +389,5 @@ footer a{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
