--- a/style.css
+++ b/style.css
@@ -360,11 +360,7 @@ footer a{
     padding: 1% 4%;
     font-size: .8rem;
 }
-.btn-cust{
-     background-color: red;
-     padding: 0% 4%;
-     color: white; 
-}
+
 .group-em{
     display: flex;
     justify-content: space-between;
@@ -396,4 +392,20 @@ footer a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.toppings{
+    font-size: .8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    justify-content: space-around;
+}
+.toppings .title{
+    margin-top: 2%;
+    font-weight: 700;
+}
+.card .btn-cust{
+    font-size: .8rem;
+    font-weight: 700;
 }
