--- a/style.css
+++ b/style.css
@@ -470,3 +470,75 @@ footer a {
     font-size: .8rem;
     font-weight: 700;
 }
+
+.cart-titles {
+    font-weight: bold;
+    color: black;
+    display: flex;
+    text-align: left;
+}
+
+.added-items .col-md-4 {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+
+.cart-price {
+    color: black;
+    font-weight: 900;
+}
+
+.item-quantity {
+    width: 30%;
+    padding: 2%;
+}
+
+.item-title {
+    color: black;
+    padding: 2%;
+}
+
+.item-image {
+    width: 20%;
+    border-radius: 4px;
+}
+
+
+.final {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin: 1rem 3rem;
+    gap: 2%;
+}
+
+.total {
+    font-size: 1.2rem;
+    color: red;
+    background-color: white;
+    padding: .5%;
+    border-radius: 3px;
+    box-shadow: 0px 1px 4px black;
+}
+
+.btn-check {
+    font-size: 1.7rem;
+    background-color: red;
+    letter-spacing: .5rem;
+    font-weight: 900;
+    margin-bottom: 1rem;
+}
+
+.btn-rm {
+    padding: 2.4% 4%;
+    background-color: red;
+    margin-left: 1rem;
+}
+
+.tittle-cart {
+    padding: 10%;
+    width: 100%;
+    background-color: black;
+    color: white;
+}
