--- a/style.css
+++ b/style.css
@@ -414,6 +414,11 @@ footer a {
     padding: 1% 4%;
     font-size: .8rem;
 }
+.txt{
+    width: 100%;
+    font-size: 1.2rem;
+    font-weight: 900;
+}
 
 .group-em {
     display: flex;
@@ -540,7 +545,21 @@ footer a {
     background-color: red;
     margin-left: 1rem;
 }
-
+.mtitle{
+    font-weight: 900;
+    font-size: 2rem;
+    color: red;
+}
+.xy{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+}
+.xyz{
+    background-image: url("img/pic13.jpg");
+    background-size: cover;
+}
 .tittle-cart {
     padding: 10%;
     width: 100%;
